@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.15.6
-Date: 2019-08-17
+Version: 1.15.7
+Date: 2019-08-18
 Authors@R: c(person("Markus", "Riester", role=c("aut", "cre"),
         email="markus.riester@novartis.com"),
     person("Angad P.", "Singh", role="aut"))
@@ -23,6 +23,7 @@ Imports:
     RColorBrewer,
     S4Vectors,
     data.table,
+    fitdistrplus,
     grDevices,
     graphics,
     stats,
