@@ -79,6 +79,7 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(VGAM,dbetabinom.ab)
 importFrom(data.table,data.table)
 importFrom(data.table,fread)
+importFrom(fitdistrplus,fitdist)
 importFrom(futile.logger,appender.tee)
 importFrom(futile.logger,flog.appender)
 importFrom(futile.logger,flog.debug)
