@@ -8,8 +8,6 @@ option_list <- list(
         help="List of input coverage files (supported formats: PureCN, GATK and CNVkit)"),
     make_option(c("--normal_panel"), action = "store", type = "character", default = NULL,
         help = "Input: VCF containing calls from a panel of normals, for example generated by GATK CombineVariants."),
-    make_option(c("--maxmeancoverage"), action="store", type="integer", default=NULL,
-        help="Maximum coverage (downscale samples exceeding this cutoff) [default auto]"),
     make_option(c("--assay"), action="store", type="character", default="",
         help="Optional assay name used in output names [default %default]"),
     make_option(c("--genome"), action="store", type="character", default=NULL,
@@ -83,7 +81,7 @@ if (length(coverageFiles)) {
     } else {
         suppressPackageStartupMessages(library(PureCN))
         flog.info("Creating normalDB. Assuming coverage files are GC-normalized.")
-        normalDB <- createNormalDatabase(coverageFiles, max.mean.coverage=opt$maxmeancoverage)
+        normalDB <- createNormalDatabase(coverageFiles)
         saveRDS(normalDB, file = output.file)
         if (length(normalDB$low.coverage.targets) > 0) {
             output.low.coverage.file <- .getFileName(outdir,"low_coverage_targets",".bed", assay, genome)
