@@ -149,7 +149,7 @@ test_that("Mapping bias function works", {
             35811642)
         tmp[idx] <- 0.9
         tmp2[idx] <- 2
-        list(bias = tmp, pon.count = tmp2)
+        data.frame(bias = tmp, pon.count = tmp2, shape1 = NA, shape2 = NA)
     }
     ret <- runAbsoluteCN(normal.coverage.file = normal.coverage.file, 
         tumor.coverage.file = tumor.coverage.file, args.filterVcf = list(remove.off.target.snvs = FALSE), 
